--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:Jeet%401997@localhost:5432/products_db
+sqlalchemy.url = postgresql://postgres:pg123456@localhost:5432/products_db
 
 
 [post_write_hooks]
